@startuml
title 30-class-AuthController / static structure
skinparam BackgroundColor #f0f0f0

package "app.api.v1" {

  class AuthController <<router>> {
    + register(payload: RegisterRequest, svc: AuthService) : TokenResponse
    + login(payload: LoginRequest, svc: AuthService) : TokenResponse
    + refresh(refresh_token: str, svc: AuthService) : TokenResponse
    + google_url(redirect_to: str?, svc: AuthService) : OAuthProviderUrlResponse
    + github_url(redirect_to: str?, svc: AuthService) : OAuthProviderUrlResponse
    + me(ctx: UserContext) : UserContext
  }
}

package "app.services" {
  class AuthService <<service>> {
    + register(payload: RegisterRequest) : TokenResponse
    + login(payload: LoginRequest) : TokenResponse
    + refresh(refresh_token: str) : TokenResponse
  }
}

package "app.models.schemas.auth" {
  class RegisterRequest <<schema>>
  class LoginRequest <<schema>>
  class TokenResponse <<schema>>
  class OAuthProviderUrlResponse <<schema>>
}

package "app.core" {
  class UserContext <<context>> {
    + user_id: int
    + tenant_id: Optional[int]
    + roles: Tuple[str, ...]
    + permissions: Tuple[str, ...]
  }
}

AuthController --> AuthService      : Depends(get_auth_service)
AuthController --> RegisterRequest  : request body (/register)
AuthController --> LoginRequest     : request body (/login)
AuthController --> TokenResponse    : response
AuthController --> OAuthProviderUrlResponse : response (/google|github/url)
AuthController --> UserContext      : Depends(get_user_context) for /me

note right of AuthController
Source: app/api/v1/auth.py
FastAPI router for register, login, refresh and /me.
end note

@enduml
